# api/gen/authn/types.pb.go
@@ -1,0 +1,302 @@
+// Code generated by protoc-gen-go(ellie). DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.10-ellie.1
+// 	protoc        (unknown)
+// source: authn/types.proto
+
+package authn
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type AuthnType int32
+
+const (
+	AuthnType_AUTHN_TYPE_UNSPECIFIED AuthnType = 0
+	AuthnType_PASSWORD               AuthnType = 1 // 密码
+	AuthnType_PASSWORD_MFA           AuthnType = 2 // 密码+MFA
+	AuthnType_THIRD_PARTY            AuthnType = 3 // 第三方身份
+)
+
+// Enum value maps for AuthnType.
+var (
+	AuthnType_name = map[int32]string{
+		0: "AUTHN_TYPE_UNSPECIFIED",
+		1: "PASSWORD",
+		2: "PASSWORD_MFA",
+		3: "THIRD_PARTY",
+	}
+	AuthnType_value = map[string]int32{
+		"AUTHN_TYPE_UNSPECIFIED": 0,
+		"PASSWORD":               1,
+		"PASSWORD_MFA":           2,
+		"THIRD_PARTY":            3,
+	}
+)
+
+func (x AuthnType) Enum() *AuthnType {
+	p := new(AuthnType)
+	*p = x
+	return p
+}
+
+func (x AuthnType) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (AuthnType) Descriptor() protoreflect.EnumDescriptor {
+	return file_authn_types_proto_enumTypes[0].Descriptor()
+}
+
+func (AuthnType) Type() protoreflect.EnumType {
+	return &file_authn_types_proto_enumTypes[0]
+}
+
+func (x AuthnType) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use AuthnType.Descriptor instead.
+func (AuthnType) EnumDescriptor() ([]byte, []int) {
+	return file_authn_types_proto_rawDescGZIP(), []int{0}
+}
+
+type AuthnAttemptStatus int32
+
+const (
+	AuthnAttemptStatus_AUTHN_ATTEMPT_STATUS_UNSPECIFIED AuthnAttemptStatus = 0
+	AuthnAttemptStatus_SUCCESS                          AuthnAttemptStatus = 1
+	AuthnAttemptStatus_FAILURE                          AuthnAttemptStatus = 2
+	AuthnAttemptStatus_BLOCKED                          AuthnAttemptStatus = 3 // 拦截（风控等因素）
+)
+
+// Enum value maps for AuthnAttemptStatus.
+var (
+	AuthnAttemptStatus_name = map[int32]string{
+		0: "AUTHN_ATTEMPT_STATUS_UNSPECIFIED",
+		1: "SUCCESS",
+		2: "FAILURE",
+		3: "BLOCKED",
+	}
+	AuthnAttemptStatus_value = map[string]int32{
+		"AUTHN_ATTEMPT_STATUS_UNSPECIFIED": 0,
+		"SUCCESS":                          1,
+		"FAILURE":                          2,
+		"BLOCKED":                          3,
+	}
+)
+
+func (x AuthnAttemptStatus) Enum() *AuthnAttemptStatus {
+	p := new(AuthnAttemptStatus)
+	*p = x
+	return p
+}
+
+func (x AuthnAttemptStatus) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (AuthnAttemptStatus) Descriptor() protoreflect.EnumDescriptor {
+	return file_authn_types_proto_enumTypes[1].Descriptor()
+}
+
+func (AuthnAttemptStatus) Type() protoreflect.EnumType {
+	return &file_authn_types_proto_enumTypes[1]
+}
+
+func (x AuthnAttemptStatus) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use AuthnAttemptStatus.Descriptor instead.
+func (AuthnAttemptStatus) EnumDescriptor() ([]byte, []int) {
+	return file_authn_types_proto_rawDescGZIP(), []int{1}
+}
+
+type AuthnResult struct {
+	state                protoimpl.MessageState `protogen:"open.v1"`
+	Success              bool                   `protobuf:"varint,1,opt,name=success,proto3" json:"success,omitempty"`
+	Uid                  uint32                 `protobuf:"varint,2,opt,name=uid,proto3" json:"uid,omitempty"`
+	SessionId            *string                `protobuf:"bytes,3,opt,name=session_id,json=sessionId,proto3,oneof" json:"session_id,omitempty"`
+	RemainingPwdAttempts *int32                 `protobuf:"varint,4,opt,name=remaining_pwd_attempts,json=remainingPwdAttempts,proto3,oneof" json:"remaining_pwd_attempts,omitempty"`
+	RemainingMfaAttempts *int32                 `protobuf:"varint,5,opt,name=remaining_mfa_attempts,json=remainingMfaAttempts,proto3,oneof" json:"remaining_mfa_attempts,omitempty"`
+	UserLocked           *bool                  `protobuf:"varint,6,opt,name=user_locked,json=userLocked,proto3,oneof" json:"user_locked,omitempty"`
+	RedirectUrl          *string                `protobuf:"bytes,7,opt,name=redirect_url,json=redirectUrl,proto3,oneof" json:"redirect_url,omitempty"`
+	unknownFields        protoimpl.UnknownFields
+	sizeCache            protoimpl.SizeCache
+}
+
+func (x *AuthnResult) Reset() {
+	*x = AuthnResult{}
+	mi := &file_authn_types_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *AuthnResult) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*AuthnResult) ProtoMessage() {}
+
+func (x *AuthnResult) ProtoReflect() protoreflect.Message {
+	mi := &file_authn_types_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use AuthnResult.ProtoReflect.Descriptor instead.
+func (*AuthnResult) Descriptor() ([]byte, []int) {
+	return file_authn_types_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *AuthnResult) GetSuccess() bool {
+	if x != nil {
+		return x.Success
+	}
+	return false
+}
+
+func (x *AuthnResult) GetUid() uint32 {
+	if x != nil {
+		return x.Uid
+	}
+	return 0
+}
+
+func (x *AuthnResult) GetSessionId() string {
+	if x != nil && x.SessionId != nil {
+		return *x.SessionId
+	}
+	return ""
+}
+
+func (x *AuthnResult) GetRemainingPwdAttempts() int32 {
+	if x != nil && x.RemainingPwdAttempts != nil {
+		return *x.RemainingPwdAttempts
+	}
+	return 0
+}
+
+func (x *AuthnResult) GetRemainingMfaAttempts() int32 {
+	if x != nil && x.RemainingMfaAttempts != nil {
+		return *x.RemainingMfaAttempts
+	}
+	return 0
+}
+
+func (x *AuthnResult) GetUserLocked() bool {
+	if x != nil && x.UserLocked != nil {
+		return *x.UserLocked
+	}
+	return false
+}
+
+func (x *AuthnResult) GetRedirectUrl() string {
+	if x != nil && x.RedirectUrl != nil {
+		return *x.RedirectUrl
+	}
+	return ""
+}
+
+var File_authn_types_proto protoreflect.FileDescriptor
+
+const file_authn_types_proto_rawDesc = "" +
+	"\n" +
+	"\x11authn/types.proto\x12\x05authn\"\x87\x03\n" +
+	"\vAuthnResult\x12\x18\n" +
+	"\asuccess\x18\x01 \x01(\bR\asuccess\x12\x10\n" +
+	"\x03uid\x18\x02 \x01(\rR\x03uid\x12\"\n" +
+	"\n" +
+	"session_id\x18\x03 \x01(\tH\x00R\tsessionId\x88\x01\x01\x129\n" +
+	"\x16remaining_pwd_attempts\x18\x04 \x01(\x05H\x01R\x14remainingPwdAttempts\x88\x01\x01\x129\n" +
+	"\x16remaining_mfa_attempts\x18\x05 \x01(\x05H\x02R\x14remainingMfaAttempts\x88\x01\x01\x12$\n" +
+	"\vuser_locked\x18\x06 \x01(\bH\x03R\n" +
+	"userLocked\x88\x01\x01\x12&\n" +
+	"\fredirect_url\x18\a \x01(\tH\x04R\vredirectUrl\x88\x01\x01B\r\n" +
+	"\v_session_idB\x19\n" +
+	"\x17_remaining_pwd_attemptsB\x19\n" +
+	"\x17_remaining_mfa_attemptsB\x0e\n" +
+	"\f_user_lockedB\x0f\n" +
+	"\r_redirect_url*X\n" +
+	"\tAuthnType\x12\x1a\n" +
+	"\x16AUTHN_TYPE_UNSPECIFIED\x10\x00\x12\f\n" +
+	"\bPASSWORD\x10\x01\x12\x10\n" +
+	"\fPASSWORD_MFA\x10\x02\x12\x0f\n" +
+	"\vTHIRD_PARTY\x10\x03*a\n" +
+	"\x12AuthnAttemptStatus\x12$\n" +
+	" AUTHN_ATTEMPT_STATUS_UNSPECIFIED\x10\x00\x12\v\n" +
+	"\aSUCCESS\x10\x01\x12\v\n" +
+	"\aFAILURE\x10\x02\x12\v\n" +
+	"\aBLOCKED\x10\x03B-Z+github.com/dizzrt/dauth/api/gen/authn;authnb\x06proto3"
+
+var (
+	file_authn_types_proto_rawDescOnce sync.Once
+	file_authn_types_proto_rawDescData []byte
+)
+
+func file_authn_types_proto_rawDescGZIP() []byte {
+	file_authn_types_proto_rawDescOnce.Do(func() {
+		file_authn_types_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_authn_types_proto_rawDesc), len(file_authn_types_proto_rawDesc)))
+	})
+	return file_authn_types_proto_rawDescData
+}
+
+var file_authn_types_proto_enumTypes = make([]protoimpl.EnumInfo, 2)
+var file_authn_types_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_authn_types_proto_goTypes = []any{
+	(AuthnType)(0),          // 0: authn.AuthnType
+	(AuthnAttemptStatus)(0), // 1: authn.AuthnAttemptStatus
+	(*AuthnResult)(nil),     // 2: authn.AuthnResult
+}
+var file_authn_types_proto_depIdxs = []int32{
+	0, // [0:0] is the sub-list for method output_type
+	0, // [0:0] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_authn_types_proto_init() }
+func file_authn_types_proto_init() {
+	if File_authn_types_proto != nil {
+		return
+	}
+	file_authn_types_proto_msgTypes[0].OneofWrappers = []any{}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_authn_types_proto_rawDesc), len(file_authn_types_proto_rawDesc)),
+			NumEnums:      2,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_authn_types_proto_goTypes,
+		DependencyIndexes: file_authn_types_proto_depIdxs,
+		EnumInfos:         file_authn_types_proto_enumTypes,
+		MessageInfos:      file_authn_types_proto_msgTypes,
+	}.Build()
+	File_authn_types_proto = out.File
+	file_authn_types_proto_goTypes = nil
+	file_authn_types_proto_depIdxs = nil
+}
